# zero

./: .gitignore  Dockerfile.jupyter  Dockerfile.ray  PHASE0_PLAN.md  PHASE1_PLAN.md  README.md  docker-compose.yml  generate_01_quantum_basics.py  generate_02_statmech_basics.py  pyproject.toml  requirements.txt
configs/: default.yaml
configs/agents/: default.yaml
configs/bio/: default.yaml
configs/integrate/: default.yaml
configs/qm/: default.yaml
configs/switchoff/: default.yaml
docs/: master_plan.md
experiments/001_lj_nve/: main.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
notebooks/: 01_quantum_basics.ipynb  01_quantum_basics_executed.ipynb  02_statmech_basics.ipynb  02_statmech_basics_executed.ipynb  03_md_basics.ipynb  04_ai_architecture.ipynb  05_equivariant_model.ipynb  06_qm9_dataset.ipynb  07_adaptive_sim.ipynb  08_mvp_v1.ipynb  09_quantum_regions.ipynb  10_neural_operators.ipynb  11_autonomous_agent.ipynb
tests/: test_cellular.py  test_coarse_grainer.py  test_depth_selector.py  test_dft_surrogate.py  test_ensemble.py  test_equivariant_layers.py  test_fno.py  test_inference.py  test_initialise.py  test_integration.py  test_integrators.py  test_io.py  test_mace.py  test_metrics.py  test_observables.py  test_pheno_trainer.py  test_potentials.py  test_pyscf_interface.py  test_qm9.py  test_qm_mm_mapper.py  test_radial_basis.py  test_sim.py  test_simulation_depth.py  test_spherical_harmonics.py  test_surrogate_trainer.py  test_switchoff_engine.py  test_train.py  test_uncertainty_estimator.py
(+58 files in other folders)
