[package]
name = 'zeno'
version = '0.1.0'
description = 'Adaptive Multiscale Biological Simulation AI'
license = 'MIT'

dependencies = ['numpy>=1.24', 'torch>=2.0', 'scipy>=1.10', 'matplotlib>=3.7', 'h5py>=3.8', 'ase', 'pymatgen']


[project.optional-dependencies]
dev=['pytest>=7.0', 'black>=23.0', 'flake8>=6.0']
train=['torch>=2.0', 'torchvision>=0.15', 'wandb', 'ray[default]>=2.0']
